<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true" 
    android:focusableInTouchMode="true" 
    tools:context="eu.vicci.bciframework.controlapp.MainActivity" >

    <TextView
        android:id="@+id/server_text"
        android:layout_marginTop="60dp"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:visibility="invisible"
        android:text="@string/server_caption" />
    
    <EditText
        android:id="@+id/ip_field"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:hint="@string/ip_hint"
        android:imeActionLabel="@string/connect_button_text"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/radio_group1"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@id/ip_field"
        android:layout_below="@id/ip_field"
        android:layout_marginTop="50dp"
        android:checkedButton="@+id/gyro_mode" >

        <RadioButton
            android:id="@+id/gyro_mode"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/button_mode"
            android:text="@string/option2" />
    </RadioGroup>
    
     <Button
        android:id="@+id/connect_button"
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/radio_group1"
        android:layout_alignLeft="@id/radio_group1"
        android:onClick="onConnectButtonClicked"
        android:text="@string/connect_button_text" />
    
</RelativeLayout>